--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "author": "MLQ",
   "license": "ISC",
+  "repository": "github:MediumLowQuality/Muninn",
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "node-7z": "^2.1.1",
-    "nodegit": "^0.27.0"
+    "simple-git": "^2.22.0"
   }
 }
